[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc4py"
version = "1.1.9"
description = "Python library specific brazilian validations"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Kelson da Costa Medeiros", email = "kelsoncm@gmail.com" }]
keywords = ["shortcuts", "python", "utils"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "black>=26.3.1",
    "ruff>=0.15.11",
    "doc8>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pytest-coverage-gate>=1.0.3",
    "responses>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/kelsoncm/sc4py"
"Bug Tracker" = "https://github.com/kelsoncm/sc4py/issues"
Download = "https://github.com/kelsoncm/sc4py/releases/"
Docs = "https://kelsoncm.github.io/python-sc4py/"

[tool.setuptools.packages.find]
where = ["."]
include = ["sc4py*"]

[tool.coverage.run]
source = ["sc4py"]
omit = ["tests/*", "sandbox/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]

[tool.black]
line-length = 120
